...
            mainAxisSize: MainAxisSize.min,
            children: [
              Text('Email: ${userNotifier.email}'),
              const SizedBox(height: 8),
              if (userNotifier.isSignedIn)
                FilledButton(
                  key: const ValueKey('LogoutBtn'),
                  onPressed: () => userNotifier.email = null,
                  child: const Text('Logout'),
                )
              else
                FilledButton(
                  key: const ValueKey('LoginBtn'),
                  onPressed: () => GoRouter.of(context).go('/login'),
                  child: const Text('Login'),
...
